# blog-notebooks

./: README.md
20220620_boruta_datalab/: README.md  blog_datalab_boruta.ipynb  boruta_sample_experiment.py  feat_selection_datalab_post.ipynb  importance_shallow_trees_versus_deep_trees.ipynb  pyproject.toml  selectktop_selector.py  shap_feature_importances_.py
2024_11_17_Blog_Evaluating_Ranking_in_Regression/: README.md  blog_evaluating_ranking_in_regression.ipynb  pyproject.toml
Blog_CATE_Estimation_with_Conformalized_Quantile_Regression/: CQR_causal_inference.ipynb  calibration_stuff.py  pyproject.toml
Blog_CATE_Estimation_with_Conformalized_Quantile_Regression_2023_07_17/: CQR_causal_inference.ipynb  README.md
Blog_Conditional_Density_Estimation_with_FlexCode_2023_06_25/: README.md  cde.ipynb  pyproject.toml
Blog_Covariate_Shift_Introduction_2020_08_02/: README.md  covariate_shift_introduction_EN.ipynb  covariate_shift_introduction_EN_medium.md  covariate_shift_introduction_PTBR.ipynb  pyproject.toml  todo.txt
Blog_MetaKMeans_2022_10_23/: README.md  blog_metakmeans.ipynb  pyproject.toml
Blog_Multiclass_Threshold_Tunning_2023_01_30/: draft_multiclass_threshold_tunning.ipynb  pyproject.toml  utils.py
Blog_R2_Score_2023_10_12/: README.md  blog_r2_score.ipynb  blog_r2_score_EN.ipynb  blog_r2_score_PT.ipynb  pyproject.toml
Blog_Threshold_Dependent_Opt_2023_01_06/: README.md  blog_threshold_dependent_opt.ipynb  pyproject.toml
DataLab_Blog_Boruta_2022_09_05/: README.md  blog_datalab_boruta.ipynb  boruta_selector.py  pyproject.toml  shap_feature_importances_.py  shap_importance_on_train_versus_on_test.ipynb
