[tool.poetry]
name = "ranking_regression"
version = "0.1.0"
description = ""
authors = ["vitaliset <carlo_lemos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
jupyter = "^1.0.0"
scikit-learn = "1.5.2"
matplotlib = "3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
