[tool.poetry]
name = "covariate-shift-intro"
version = "0.1.0"
description = ""
authors = ["vitaliset <carlo_lemos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
numpy = "1.24.1"
pandas = "1.5.2"
matplotlib = "3.6.2"
scikit-learn = "1.2.2"
tqdm = "4.64.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
