[tool.poetry]
name = "blog_multiclass_threshold_tunning"
version = "0.1.0"
description = ""
authors = ["vitaliset"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "1.24.1"
pandas = "1.5.2"
matplotlib = "3.6.2"
scikit-learn = "1.2.0"
tqdm = "4.64.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
