[tool.poetry]
name = "blog_datalab_boruta"
version = "0.1.0"
description = "packages for reproducing the notebook\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[D\u001b[Dblog \u001b[2~no\u001b[2~tebook"
authors = ["vitaliset"]

[tool.poetry.dependencies]
python = "3.9.6"
numpy = "1.23.2"
pandas = "1.4.3"
matplotlib = "3.5.3"
scikit-learn = "1.1.2"
Boruta = "0.3"
shap = "0.41.0"
seaborn = "0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
